# fortress-agent

./: .gitmodules  Cargo.toml  Makefile  README.md  shell.nix
docs/: data-flow.puml  distributed-message-signing.md
hardware/: telescope-v0.1.scad
scout/: CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.old
scout/.cargo/: config.toml
scout/main/: hello_world_main.c
scout/src/: main.c  main.rs
telescope/: Cargo.toml
telescope/src/: lib.rs  main.rs
