[package]
name = "scout"
version = "0.1.0"
edition = "2021"

# No xtensa in regular compiler yet
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[profile.dev]
opt-level = "s"

[features]
bind = []

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.42"
esp-idf-hal = "0.38"
embedded-svc = "0.22"
embedded-hal = "0.2"

[build-dependencies]
embuild = "0.24"
anyhow = "1"
