[package]
name = "scout"
version = "0.1.0"
authors = ["Lukas Herman <lukasman@amazon.com>"]
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
esp-idf-hal = "0.38.1"
anyhow = "1"
embedded-io = "0.3.1"
tiny_http = "0.11"

[build-dependencies]
embuild = "0.30"
anyhow = "1"
